# norcina

./: .gitignore  Cargo.toml  flake.nix  notes.md
norcina/: Cargo.toml
norcina-cube3/: Cargo.toml
norcina-cube3/benches/: criterion.rs
norcina-cube3/examples/: kociemba.rs  manhattan.rs
norcina-cube3/src/: cube.rs  lib.rs  main.rs
norcina-cube3/src/mov/: alg.rs  mod.rs
norcina-cube3/src/mov/snapshots/: norcina_cube3__mov__tests__Move: B .snap  norcina_cube3__mov__tests__Move: B'.snap  norcina_cube3__mov__tests__Move: B2.snap  norcina_cube3__mov__tests__Move: D .snap  norcina_cube3__mov__tests__Move: D'.snap  norcina_cube3__mov__tests__Move: D2.snap  norcina_cube3__mov__tests__Move: F .snap  norcina_cube3__mov__tests__Move: F'.snap  norcina_cube3__mov__tests__Move: F2.snap  norcina_cube3__mov__tests__Move: L .snap  norcina_cube3__mov__tests__Move: L'.snap  norcina_cube3__mov__tests__Move: L2.snap  norcina_cube3__mov__tests__Move: R .snap  norcina_cube3__mov__tests__Move: R'.snap  norcina_cube3__mov__tests__Move: R2.snap  norcina_cube3__mov__tests__Move: U .snap  norcina_cube3__mov__tests__Move: U'.snap  norcina_cube3__mov__tests__Move: U2.snap  norcina_cube3__mov__tests__instance_all_basic_moves-10.snap  norcina_cube3__mov__tests__instance_all_basic_moves-11.snap  norcina_cube3__mov__tests__instance_all_basic_moves-12.snap  norcina_cube3__mov__tests__instance_all_basic_moves-13.snap  norcina_cube3__mov__tests__instance_all_basic_moves-14.snap  norcina_cube3__mov__tests__instance_all_basic_moves-15.snap  norcina_cube3__mov__tests__instance_all_basic_moves-16.snap  norcina_cube3__mov__tests__instance_all_basic_moves-17.snap  norcina_cube3__mov__tests__instance_all_basic_moves-18.snap  norcina_cube3__mov__tests__instance_all_basic_moves-2.snap  norcina_cube3__mov__tests__instance_all_basic_moves-3.snap  norcina_cube3__mov__tests__instance_all_basic_moves-4.snap  norcina_cube3__mov__tests__instance_all_basic_moves-5.snap  (+5 more)
norcina-cube3/src/search/: kociemba.rs  lut_heuristic.rs  mod.rs
norcina-cube3/src/snapshots/: norcina_cube3__cube__tests__debug_cube_insta.snap  norcina_cube3__cube__tests__display_cube_insta.snap
norcina-pyraminx/: Cargo.toml
norcina-pyraminx/src/: lib.rs  main.rs  mov.rs
norcina-pyraminx/src/piece/: center.rs  edge.rs  mod.rs  tip.rs
norcina-pyraminx/src/snapshots/: norcina_pyraminx__tests__Move: B  (tip=false).snap  norcina_pyraminx__tests__Move: B' (tip=false).snap  norcina_pyraminx__tests__Move: L  (tip=false).snap  norcina_pyraminx__tests__Move: L' (tip=false).snap  norcina_pyraminx__tests__Move: R  (tip=false).snap  norcina_pyraminx__tests__Move: R' (tip=false).snap  norcina_pyraminx__tests__Move: U  (tip=false).snap  norcina_pyraminx__tests__Move: U' (tip=false).snap  norcina_pyraminx__tests__Move: b  (tip=true).snap  norcina_pyraminx__tests__Move: b' (tip=true).snap  norcina_pyraminx__tests__Move: l  (tip=true).snap  norcina_pyraminx__tests__Move: l' (tip=true).snap  norcina_pyraminx__tests__Move: r  (tip=true).snap  norcina_pyraminx__tests__Move: r' (tip=true).snap  norcina_pyraminx__tests__Move: u  (tip=true).snap  norcina_pyraminx__tests__Move: u' (tip=true).snap  norcina_pyraminx__tests__snapshot_solved_pyraminx.snap
norcina/src/: lib.rs
(+55 files in other folders)
