[package]
name = "norcina-cube3"
version = "0.1.0"
edition = "2024"

[dependencies]
norcina-core = { path = "../norcina-core" }
norcina-cube-n = { path = "../norcina-cube-n" }
quickcheck = { workspace = true, optional = true }
dirs = { version = "6.0.0", optional = true }
nybbles = { version = "0.3.4", optional = true }
rand.workspace = true
owo-colors.workspace = true
pathfinding.workspace = true

[dev-dependencies]
insta.workspace = true
quickcheck.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = ["quickcheck", "kociemba"]
kociemba = []
lut_heuristic = ["dep:nybbles", "dep:dirs"]
quickcheck = ["dep:quickcheck"]

[[bench]]
name = "criterion"
harness = false
