[package]
name = "norcina-pyraminx"
version = "0.1.0"
edition = "2024"

[dependencies]
norcina-core = { path = "../norcina-core" }
owo-colors.workspace = true
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
norcina-core = { path = "../norcina-core", features = ["quickcheck"] }

[features]
quickcheck = ["dep:quickcheck", "norcina-core/quickcheck"]
